compiler-core/src/parse/snapshots/gleam_core__parse__tests__tuple_invalid_expr.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\nfn main() {\n    #(1, 2, const)\n}\n"
---
----- SOURCE CODE

fn main() {
    #(1, 2, const)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:13
  │
3 │     #(1, 2, const)
  │             ^^^^^ I was not expecting this

Found the keyword `const`, expected one of: 
- `)`
- an expression
